--- a/week 3/Gold/index.html
+++ b/week 3/Gold/index.html
@@ -29,7 +29,7 @@ term 1303-->
 </head>
 <body>
 	<div data-role="page" id="index">
-		<div data-role="header" data-position="fixed">
+		<div data-role="header" data-position="fixed" id="header">
 			<h1>Game Browser</h1>
 		</div>
 		<div data-role="content">
@@ -176,91 +176,79 @@ term 1303-->
 	</div>
 		<div data-role="page" id="addItem">
 		<div data-role="header" data-position="fixed">
+			<h1>Game Organizer</h1>
+			<a href="#" id="clear">Clear Stored Data</a> <!-- Clear data link -->
+                <a href="#" id="displayData">Display Data</a>  <!-- Display data link-->
+
 		</div>
 		<div data-role="content">
-			<form>
-				<div data-role"fieldcontain">
-					<label for="genSel">Game Genre</label>
-					<select name="genSel" id="genSel" data-native-menu="false">
-						<option data-placeholder="true">Choose a Genre</option>
-						<option value="act">Action</option>
-						<option value="adv">Adventure</option>
-						<option value="rpg">RPG</option>
-						<option value="shot">Shooter</option>
-						<option value="plat">Platformer</option>
-						<option value="race">Racing</option>
+		<form action="" id="itemForm">
+			<div data-role"fieldcontain">
+				<label for="genSel">Game Genre</label>
+					<select name="genSel" id="genSel" data-native-menu="false" class="required">
+						<option value="">Choose a Genre</option>
+						<option value="Action">Action</option>
+						<option value="Adventure">Adventure</option>
+						<option value="RPG">RPG</option>
+						<option value="Shot">Shooter</option>
+						<option value="Platformer">Platformer</option>
+						<option value="Racing">Racing</option>
 					</select>
-				</div>
-			</form>
-			<form>
-				<div data-role="fieldcontain">
-					<label for="title">Game Title</label>
-					<input type="text" name="title" id="title" value="">
-				</div>
-			</form>
-			<form>
-				<div data-role"fieldcontain">
-					<label for="conSel">Game Console</label>
-					<select name="conSel" id="conSel" data-native-menu="false">
-						<option data-placeholder="true">Choose a Console</option>
-						<option value="ps3">PS3</option>
-						<option value="xbox">Xbox360</option>
-						<option value="wii">Wii</option>
-						<option value="psv">PSV</option>
-						<option value="pc">PC</option>
-						<option value="3ds">3DS</option>
+			</div>
+			<div data-role="fieldcontain">
+				<label for="title">Game Title</label>
+				<input type="text" name="title" id="title" value="" class="required">
+			</div>
+			<div data-role"fieldcontain">
+				<label for="conSel">Game Console</label>
+					<select name="conSel" id="conSel" data-native-menu="false" class="required">
+						<option value="">Choose a Console</option>
+						<option value="PS3">PS3</option>
+						<option value="Xbox360">Xbox360</option>
+						<option value="Wii">Wii</option>
+						<option value="PSV">PSV</option>
+						<option value="PC">PC</option>
+						<option value="3DS">3DS</option>
 					</select>
-				</div>
-			</form>
-			<form>
-				<div data-role="fieldcontain">
-					<fieldset data-role="controlgroup" data-role="horizonal">
-						<legend>Did you enjoy plying this game?</legend>
-						<input type="radio" name="enjoy" id="enjyes" value="yes" checked="checked">
-						<label for="enjyes">Yes</label>
-						<input type="radio" name="enjoy" id="enjno" value="no">
-						<label  for="enjno">No</label>
-					</fieldset>
-				</div>
-			</form>
-			<form>
-				<div data-role="fieldcontain">
-					<label>
-						<input type="checkbox" name="beat">Did you beat this game?
-					</label>
-				</div>
-			</form>
-			<form>
-				<div data-role="firldcontain">
-					<label  for="date"> What day did you beat the game on?</label>
-					<input type="date" data-clear-btn="true" name="date" value="" placeholder="MM-DD-YYYY">
-				</div>
-			</form>
-			<form>
-				<div data-role="fieldcontain">
-					<label for="rate">Rate the game for 1 to 5</label>
-					<input type="range" name="rate" id="rate" min="1" max="5" value="4">
-				</div>
-			</form>
-			<form>
-				<div data-role="fieldcontain">
-					<label for="extra">Extra Notes</label>
-					<textarea placeholder="Add information about where you are stuck in the game, things you like or dislike about the game and/or additional information you would like to record."></textarea>
-				</div>
-			</form>
-			<form>
-				<div data-role="fieldcontain">
-					<input type="submit" value="Submit">
-				</div>
-					<div data-role="fieldcontain">
-						<a herf=#><input type="reset" value="Reset"></a>
-					</div>
-			</form>
+			</div>
+			<div data-role="fieldcontain">
+				<fieldset data-role="controlgroup" data-role="horizonal">
+					<legend>Did you enjoy plying this game?</legend>
+					<input type="radio" name="enjoy" id="enjyes" value="Yes" checked="checked">
+					<label for="enjyes">Yes</label>
+					<input type="radio" name="enjoy" id="enjno" value="No">
+					<label  for="enjno">No</label>
+				</fieldset>
+			</div>
+			<div data-role="fieldcontain">
+				<label>
+					<input type="checkbox" name="beat" id="beat" value="Yes">Did you beat this game?
+				</label>
+			</div>
+			<div data-role="firldcontain">
+				<label  for="date"> What day did you beat the game on?</label>
+				<input type="date" data-clear-btn="true" name="date" id="date" value="" placeholder="MM-DD-YYYY" class="required">
+			</div>
+			<div data-role="fieldcontain">
+				<label for="rate">Rate the game for 1 to 5</label>
+				<input type="range" name="rate" id="rate" min="1" max="5" value="4">
+			</div>
+			<div data-role="fieldcontain">
+				<label for="extra">Extra Notes</label>
+				<textarea placeholder="Add information about where you are stuck in the game, things you like or dislike about the game and/or additional information you would like to record." class="required" name="note" id="notes"></textarea>
+			</div>
+			<div data-role="fieldcontain">
+				<input type="submit" value="Submit Game to Library" id="submit">
+			</div>
+			<div data-role="fieldcontain">
+				<input type="reset" value="Reset" id="reset">
+			</div>
+		</form>
 		</div>
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" id="footer">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="index.html" data-icon="home" data-ajax="true">Home</a></li>
+<!-- 					<li><a href="#index" data-icon="home" data-ajax="true">Home</a></li> -->
 					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
 					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
@@ -324,7 +312,7 @@ term 1303-->
 			<h2>Coming Soon</h2>
 			<p>This data will been entered as soon as possible.</p>
 		</div>
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" display="inline">
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#index" data-icon="home">Home</a></li>
@@ -339,7 +327,8 @@ term 1303-->
 </body>
 	<!-- JavaScript under here -->
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script></body>
+	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
+	<script src="js/libs/jquery.validate.min.js" type="text/javascript"></script>
 	<script src="js/json.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
 </html>
