Saving data from form to local storge works.

--- a/week 3/Gold/additem.html
+++ b/week 3/Gold/additem.html
@@ -53,7 +53,7 @@
             </footer>
             </form>
             <script src="js/json.js" type="text/javascript"></script>
-            <script src="js/main.js" type="text/javascript"></script>
+            <script src="js/old-main.js" type="text/javascript"></script>
         </body>
         
     </html>
