Added branding to gold and bronze app. Added color to bronze app

--- a/week 4/Gold/index.html
+++ b/week 4/Gold/index.html
@@ -32,7 +32,7 @@ term 1303-->
 	<div data-role="page" id="index" data-theme="a">
 		<div data-role="header" data-position="fixed" id="header">
 		<link rel="stylesheet" href="css/themes/gameOrg.min.css" />
-			<h1>Game Browser</h1>
+		<img src="images/brand.png" width="300px">
 		</div>
 		<div data-role="content" data-theme="a">
 			<p><a href="#addItem"><img src="images/CTA2.png" style="width:280px"></a></p>
@@ -57,13 +57,13 @@ term 1303-->
 			</div>
 		</div>	
 	</div>
-	<div data-role="page" id="genPage">
+	<div data-role="page" id="genPage" data-theme="a">
 		<div data-role="header" data-position="fixed">
 			<h1>Genre Groups</h1>
 		</div>
 		<div data-role="content">
 			<div id="genBtn">
-				<ul data-role="listview" data-inset="true" data-theme="b">
+				<ul data-role="listview" data-inset="true" data-theme="a">
 					<li><a href="#coming">Action</a></li>
 					<li><a href="#coming">Adventure</a></li>
 					<li><a href="#coming">RPG</a></li>
@@ -83,7 +83,7 @@ term 1303-->
 			</div>
 		</div>
 	</div>
-	<div data-role="page" id="conPage">
+	<div data-role="page" id="conPage" data-theme="a">
 		<div data-role="header" data-position="fixed">
 		<h1>Console Groups</h1>
 		</div>
@@ -107,13 +107,13 @@ term 1303-->
 			</div>
 		</div>
 	</div>
-	<div data-role="page" id="enjPage">
+	<div data-role="page" id="enjPage" data-theme="a">
 		<div data-role="header" data-position="fixed">
 			<h1>Enjoyable Groups</h1>
 			</div>
 		<div data-role="content">
 			<div id="enjBtn">
-				<ul data-role="listview" data-inset="true" data-theme="b">
+				<ul data-role="listview" data-inset="true" data-theme="a">
 					<li><a href="#coming">Yes</a></li>
 					<li><a href="#coming">No</a></li>
 				</ul>
@@ -129,13 +129,13 @@ term 1303-->
 			</div>
 		</div>
 	</div>
-	<div data-role="page" id="beatPage">
+	<div data-role="page" id="beatPage" data-theme="a">
 		<div data-role="header" data-position="fixed">
 			<h1>Beaten Groups</h1>
 		</div>
 		<div data-role="content">
 			<div id="beatBtn">
-				<ul data-role="listview" data-inset="true" data-theme="b">
+				<ul data-role="listview" data-inset="true" data-theme="a">
 					<li><a href="#coming">Yes</a></li>
 					<li><a href="#coming">No</a></li>
 				</ul>
@@ -151,13 +151,13 @@ term 1303-->
 			</div>
 		</div>
 	</div>
-	<div data-role="page" id="ratePage">
+	<div data-role="page" id="ratePage" data-theme="a">
 		<div data-role="header" data-position="fixed">
 			<h1>Rating Groups</h1>
 		</div>
 		<div data-role="content">
 			<div id="rateBtn">
-				<ul data-role="listview" data-inset="true" data-theme="b">
+				<ul data-role="listview" data-inset="true" data-theme="a">
 					<li><a href="#coming">1 Star</a></li>
 					<li><a href="#coming">2 Star</a></li>
 					<li><a href="#coming">3 Star</a></li>
@@ -178,7 +178,7 @@ term 1303-->
 	</div>
 		<div data-role="page" id="addItem" data-theme="a">
 		<div data-role="header" data-position="fixed">
-			<h1>Game Organizer</h1>
+			<img src="images/brand.png" width="300px">
 		</div>
 		<div data-role="content">
 		<div id="buttonLinks">
@@ -259,8 +259,9 @@ term 1303-->
 			</div>
 		</div>
 	</div>
-	<div data-role="page" id="newsStream">
+	<div data-role="page" id="newsStream" data-theme="a">
 		<div data-role="header" data-position="fixed">
+		<link rel="stylesheet" href="css/themes/gameOrg.min.css" />
 			<h1>News Stream</h1>
 		</div>
 		<div data-role="content">
@@ -284,8 +285,9 @@ term 1303-->
 			</div>
 		</div>
 	</div>	
-	<div data-role="page" id="about">
+	<div data-role="page" id="about" data-theme="a">
 		<div data-role="header" data-position="fixed">
+		<link rel="stylesheet" href="css/themes/gameOrg.min.css" />
 			<h1>ABOUT</h1>
 		</div>
 		<div data-role="content">
