--- a/week 4/Bronze/index.html
+++ b/week 4/Bronze/index.html
@@ -19,6 +19,7 @@ term 1303-->
 	<meta http-equiv="cleartype" content="on">
 	
 	<!-- StyleSheets under here -->
+	<link rel="stylesheet" href="css/themes/gameOrg.min.css" />
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
 	<link rel="stylesheet" href="css/style.css"/>
 	<!-- JavaScript is normally at the end of the body, except for Modernizr which enables HTML5 elements & feature detects -->
@@ -26,8 +27,9 @@ term 1303-->
 
 </head>
 <body>
-	<div data-role="page" id="index">
-		<div data-role="header" data-position="fixed">
+	<div data-role="page" id="index" data-theme="b">
+		<div data-role="header" data-position="fixed" >
+		<link rel="stylesheet" href="css/themes/gameOrg.min.css" />
 			<h1>Game Browser</h1>
 		</div>
 		<div data-role="content" data-inset="true">
@@ -118,7 +120,7 @@ term 1303-->
 				</div>
 			</div>
 		</div>
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#index" data-icon="home">Home</a></li>
@@ -137,7 +139,7 @@ term 1303-->
 			<h2>Coming Soon</h2>
 			<p>This data will been entered as soon as possible.</p>
 		</div>
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#index" data-icon="home">Home</a></li>
@@ -147,8 +149,9 @@ term 1303-->
 			</div>
 		</div>
 	</div>
-	<div data-role="page" id="newsStream">
+	<div data-role="page" id="newsStream" data-theme="b">
 		<div data-role="header" data-position="fixed">
+		<link rel="stylesheet" href="css/themes/gameOrg.min.css" />
 			<h1>News Stream</h1>
 		</div>
 		<div data-role="content">
@@ -162,7 +165,7 @@ term 1303-->
 			<p>2012-12-25: Added a Wii game to the library.</p>
 			<p>2012-12-25: Added a PSV game to the library.</p>
 		</div>
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#index" data-icon="home">Home</a></li>
@@ -172,8 +175,9 @@ term 1303-->
 			</div>
 		</div>
 	</div>	
-	<div data-role="page" id="about">
+	<div data-role="page" id="about" data-theme="b">
 		<div data-role="header" data-position="fixed">
+		<link rel="stylesheet" href="css/themes/gameOrg.min.css" />
 			<h1>ABOUT</h1>
 		</div>
 		<div data-role="content">
@@ -186,7 +190,7 @@ term 1303-->
 			<a href="http://b02197.github.com/Miu/week%202/Gold/index.html">Gold App</a> <br>
 		
 		</div>
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" data-theme="b">
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#index" data-icon="home">Home</a></li>
